Added test coverage + Standardized Endpoint Names
